Text to Text endpoints using IBM Watson more tests update readme update doc
